# amplifi

./: .env.example  .gitignore  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/models/: __init__.py  ad.py  base.py  content.py  email_campaign.py  keyword.py  metric.py  site.py  subscriber.py  user.py
backend/app/services/: ad_copy_generator.py  analytics_service.py  content_generator.py  email_service.py  image_generator.py  rate_limiter.py  seo_service.py  site_analyzer.py
backend/app/tasks/: content_tasks.py
backend/tests/: conftest.py
backend/tests/test_ads/: test_ad_copy_generator.py  test_ad_models.py  test_ad_platforms.py  test_ad_router.py  test_ad_schemas.py
backend/tests/test_analytics/: test_analytics_router.py  test_analytics_schemas.py  test_analytics_service.py  test_metric_model.py
backend/tests/test_auth/: test_router.py  test_service.py  test_site_model.py  test_user_model.py
backend/tests/test_content/: test_content_generate_endpoint.py  test_content_model.py  test_content_router.py  test_content_schedule.py  test_content_schemas.py  test_email_campaign_model.py  test_keyword_model.py  test_subscriber_model.py
backend/tests/test_services/: test_celery.py  test_config.py  test_content_generator.py  test_content_tasks.py  test_database.py  test_email_service.py  test_llm_factory.py  test_llm_providers.py  test_llm_providers_extra.py  test_llm_registry.py  test_publisher_base.py  test_rate_limiter.py  test_seo_service.py  (+2 more)
(+63 files in other folders)
